Right padding for home page intro Prevents overlap of text and background in RTL languages. Towards #275

--- a/css/home.styl
+++ b/css/home.styl
@@ -59,6 +59,7 @@
       .left
         width: $one-quarter
         padding-top: 25px
+        padding-right: 600px
         
         .header-blue
           font-family: "Open Sans"
